# seishin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: engine_task.yml  feature_request.yml
.github/workflows/: ci.yml  publish-crates.yml
crates/seishin/: Cargo.toml
crates/seishin/src/: app.rs  lib.rs  platform.rs  tilemap.rs
crates/seishin_assets/: Cargo.toml
crates/seishin_assets/src/: bundle.rs  image.rs  lib.rs  loader.rs  platform.rs
crates/seishin_audio/: Cargo.toml
crates/seishin_audio/src/: backend.rs  lib.rs  platform.rs  system.rs  types.rs
crates/seishin_input/src/: lib.rs  state.rs
crates/seishin_physics/src/: aabb.rs  collider.rs  lib.rs
crates/seishin_render/: Cargo.toml
crates/seishin_render/src/: error.rs  lib.rs  renderer.rs  types.rs
crates/seishin_render_graph/: Cargo.toml
crates/seishin_render_graph/src/: lib.rs
crates/seishin_runtime/: Cargo.toml
crates/seishin_runtime/src/: block_on.rs  desktop.rs  error.rs  lib.rs  mobile.rs
crates/seishin_world/: Cargo.toml
crates/seishin_world/src/: builder.rs  diff.rs  document.rs  lib.rs  procedural.rs  record.rs  reload.rs  resolve.rs  save.rs  tile_map.rs  world.rs
docs/: architecture.md  roadmap.md
docs/adr/: 0002-reversa-reference-not-parity.md  0004-private-backend-dependencies.md
docs/superpowers/plans/: 2026-05-09-data-driven-core.md
docs/superpowers/specs/: 2026-05-09-data-driven-core-design.md
examples/basic_2d/: Cargo.toml
examples/basic_2d/resources/scenes/: main.scene.toml
examples/basic_2d/src/: main.rs
examples/basic_2d/src/components/: player_controller.rs
examples/mini_rpg/: Cargo.toml  Seishin.toml
examples/mini_rpg/resources/data/characters/: goblin.toml  merchant.toml  player.toml
examples/mini_rpg/resources/data/dialogues/: goblin_intro.dialogue.toml  merchant_intro.dialogue.toml  player_intro.dialogue.toml
examples/mini_rpg/resources/data/maps/: overworld.map
examples/mini_rpg/resources/prefabs/: goblin.prefab.toml  npc.prefab.toml  player.prefab.toml  world_controller.prefab.toml
examples/mini_rpg/resources/scenes/: main.scene.toml
examples/mini_rpg/src/: main.rs
examples/mini_rpg/src/components/: dev_validation.rs  map_bootstrap.rs  map_state.rs  mod.rs  player_camera.rs  player_controller.rs  player_interaction.rs  wanderer.rs
examples/no_default_wasm/: Cargo.toml
examples/no_default_wasm/src/: main.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
