[workspace]
members = [
    "crates/seishin",
    "crates/seishin_core",
    "crates/seishin_world",
    "crates/seishin_runtime",
    "crates/seishin_render",
    "crates/seishin_render_graph",
    "crates/seishin_input",
    "crates/seishin_assets",
    "crates/seishin_audio",
    "crates/seishin_physics",
    "crates/seishin_ffi",
    "examples/minimal",
    "examples/basic_2d",
    "examples/no_default_wasm",
    "tools/xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/seishin"
rust-version = "1.75"

[workspace.dependencies]
seishin = { path = "crates/seishin", default-features = false }
seishin_core = { path = "crates/seishin_core" }
seishin_world = { path = "crates/seishin_world" }
seishin_runtime = { path = "crates/seishin_runtime", default-features = false }
seishin_render = { path = "crates/seishin_render", default-features = false }
seishin_render_graph = { path = "crates/seishin_render_graph" }
seishin_input = { path = "crates/seishin_input" }
seishin_assets = { path = "crates/seishin_assets", default-features = false }
seishin_audio = { path = "crates/seishin_audio", default-features = false }
seishin_physics = { path = "crates/seishin_physics" }
bytemuck = { version = "1.15.0", features = ["derive"] }
cargo_metadata = "0.18.1"
futures-util = "0.3.31"
kira = { version = "0.12.0", default-features = false, features = ["cpal", "wav"] }
js-sys = "0.3.97"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.23"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wasm-bindgen-futures = "0.4.70"
wasm-bindgen = "0.2.120"
web-sys = "0.3.97"
wgpu = { version = "0.19.4", features = ["webgl"] }
winit = "0.30.13"
