[package]
name = "seishin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
seishin_assets = { workspace = true, default-features = false }
seishin_audio = { workspace = true, default-features = false }
seishin_core.workspace = true
seishin_world.workspace = true
seishin_input.workspace = true
seishin_physics.workspace = true
seishin_render = { workspace = true, default-features = false }
seishin_render_graph.workspace = true
seishin_runtime = { workspace = true, default-features = false }
serde.workspace = true
serde_json = { workspace = true, optional = true }
toml.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-util = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["console", "Document", "Element", "Response", "Window"] }

[features]
default = ["desktop", "web", "render-wgpu", "audio-kira", "png", "logging"]
desktop = ["seishin_runtime/desktop", "render-wgpu"]
web = [
    "dep:futures-util",
    "dep:serde_json",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "seishin_assets/web",
    "seishin_runtime/web",
    "render-wgpu",
]
render-wgpu = ["seishin_render/wgpu-backend"]
audio-kira = ["seishin_audio/kira-backend"]
png = ["seishin_assets/png"]
logging = ["dep:tracing", "dep:tracing-subscriber"]
