[package]
name = "seishin_audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
seishin_assets = { workspace = true, default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kira = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["HtmlAudioElement", "HtmlMediaElement"] }

[features]
default = ["kira-backend"]
kira-backend = ["dep:kira"]
web = ["dep:wasm-bindgen", "dep:web-sys", "seishin_assets/web"]
