[package]
name = "seishin_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
seishin_core.workspace = true
seishin_input.workspace = true
seishin_render = { workspace = true, default-features = false }
pollster = { workspace = true, optional = true }
winit = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["console", "Document", "Element", "HtmlCanvasElement", "Performance", "Window"] }

[features]
default = ["desktop", "web"]
desktop = ["dep:pollster", "dep:winit", "seishin_render/wgpu-backend"]
web = [
    "dep:pollster",
    "dep:winit",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "seishin_render/wgpu-backend",
]
