[package]
name = "seishin_mini_rpg"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
seishin = { workspace = true, features = ["desktop", "web", "render-wgpu", "audio-kira", "png", "logging"] }
toml = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["console", "Document", "Element", "HtmlHeadElement", "Window"] }
